Finish third page

--- a/home.html
+++ b/home.html
@@ -104,7 +104,7 @@
                         </li>
                         
                         <li>
-                            <a class="navscroll link-underline" data-idpage="item-page-1">Works</a>
+                            <a class="navscroll link-underline" href="/works.html">Works</a>
                         </li>
                         <li>
                             <a class="navscroll link-underline" data-idpage="page-services">Services</a>
