Finishing third page

--- a/works.html
+++ b/works.html
@@ -100,11 +100,11 @@
                 <div class="main-inner-navigation">
                     <ul>
                         <li>
-                            <a class="navscroll link-underline active" data-idpage="/home.html">Home</a>
+                            <a class="navscroll link-underline " href="/home.html">Home</a>
                         </li>
                         
                         <li>
-                            <a class="navscroll link-underline" href="/works.html">Works</a>
+                            <a class="navscroll link-underline active" href="/works.html">Works</a>
                         </li>
                         <li>
                             <a class="navscroll link-underline" data-idpage="page-services">Services</a>
