--- a/home.html
+++ b/home.html
@@ -100,21 +100,19 @@
                 <div class="main-inner-navigation">
                     <ul>
                         <li>
-                            <a class="navscroll link-underline active" data-idpage="/home.html">Home</a>
+                            <a class="navscroll link-underline active" href="/home.html">Home</a>
                         </li>
                         
                         <li>
                             <a class="navscroll link-underline" href="/works.html">Works</a>
                         </li>
                         <li>
-                            <a class="navscroll link-underline" data-idpage="page-services">Services</a>
+                            <a class="navscroll link-underline" href="/services">Services</a>
                         </li>
                         <li>
-                            <a class="navscroll link-underline" data-idpage="page-news">News</a>
+                            <a class="navscroll link-underline" href="/news.html">News</a>
                         </li>
-                        <li>
-                            <a class="navscroll link-underline" data-idpage="page-contact">Contact</a>
-                        </li>
+                       
                         <li>
                             <a class="navscroll link-underline" href="/about-us.html">About Us</a>
                         </li>
